[ci skip] Remove broken cell 4fe67e935f297697b7c00d1ec65918bedbbca18e

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "359da422",
+   "id": "e68073c1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ae3c20",
+   "id": "a14d575b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ca5f95",
+   "id": "b75aae70",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf81f4e",
+   "id": "7d1a2e83",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f778b4",
+   "id": "d37cf052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89634d43",
+   "id": "c5ed93f5",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9160bac4",
+   "id": "596c9d18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a898bdc",
+   "id": "9bfc2665",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ae8135",
+   "id": "d1361425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,15 +170,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713f8353",
+   "id": "f1dd432b",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather_raw = {}\n",
     "for city_name in city_names:\n",
-    "    all_city_weather_raw[city_name] = skrub.var(\n",
-    "        f\"{city_name}_weather_raw\",\n",
-    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\")),\n",
+    "    # all_city_weather_raw[city_name] = skrub.var(\n",
+    "        # f\"{city_name}_weather_raw\",\n",
+    "    all_city_weather_raw[city_name] = (\n",
+    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\"))\n",
     "    ).with_columns(\n",
     "        [\n",
     "            pl.col(\"time\").dt.cast_time_unit(\n",
@@ -191,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "811ff7fb",
+   "id": "8ecc8d7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c31740e",
+   "id": "e02db2ef",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -213,23 +214,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7892c4d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d58c727",
+   "id": "e8a069a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_city_weather = time\n",
+    "all_city_weather = time.skb.eval()\n",
     "for city_name, city_weather_raw in all_city_weather_raw.items():\n",
     "    all_city_weather = all_city_weather.join(\n",
     "        city_weather_raw.rename(lambda x: x if x == \"time\" else x + \"_\" + city_name),\n",
@@ -237,12 +226,16 @@
     "        how=\"inner\",\n",
     "    )\n",
     "\n",
+    "all_city_weather = skrub.var(\n",
+    "    \"all_city_weather\",\n",
+    "    all_city_weather,\n",
+    ")\n",
     "all_city_weather"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21f42596",
+   "id": "b97af66d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4911dc3",
+   "id": "a454e887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab81169",
+   "id": "1ee2da05",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5f59a3",
+   "id": "9422100c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da36055f",
+   "id": "88223739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30080418",
+   "id": "d3e53036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a8e8f87",
+   "id": "525738cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47749ad6",
+   "id": "980c76ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d12be1",
+   "id": "ca5f7f79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f27dcb",
+   "id": "8d35361e",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd8ce54",
+   "id": "04809a18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80e2710",
+   "id": "50eda76f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745c0e3d",
+   "id": "af7a4006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,16 +469,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef6807c4",
+   "id": "d3b4ab0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import altair\n",
     "\n",
     "\n",
-    "altair.Chart(\n",
-    "    electricity_lagged.tail(100).skb.eval()\n",
-    ").transform_fold(\n",
+    "altair.Chart(electricity_lagged.tail(100).skb.eval()).transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
     "        \"load_mw_lag_1h\",\n",
@@ -499,16 +490,12 @@
     "        \"load_mw_iqr_7d\",\n",
     "    ],\n",
     "    as_=[\"key\", \"load_mw\"],\n",
-    ").mark_line(\n",
-    "    tooltip=True\n",
-    ").encode(\n",
-    "    x=\"time:T\", y=\"load_mw:Q\", color=\"key:N\"\n",
-    ").interactive()"
+    ").mark_line(tooltip=True).encode(x=\"time:T\", y=\"load_mw:Q\", color=\"key:N\").interactive()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9788db15",
+   "id": "181fea9f",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -520,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5496c6",
+   "id": "f0ff2c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5eb95d8",
+   "id": "139ad705",
    "metadata": {},
    "source": [
     "\n",
@@ -542,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "376fa6d3",
+   "id": "4f436c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ddcc8a",
+   "id": "8dd530ea",
    "metadata": {},
    "source": [
     "\n",
@@ -565,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b44f98e",
+   "id": "71770cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c076b3",
+   "id": "7af9be29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,9 +586,7 @@
     "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
     "    ).skb.eval()\n",
     ").transform_fold(\n",
-    "    [\n",
-    "        f\"temperature_2m_{city_name}\" for city_name in city_names\n",
-    "    ],\n",
+    "    [f\"temperature_2m_{city_name}\" for city_name in city_names],\n",
     ").mark_line(\n",
     "    tooltip=True\n",
     ").encode(\n",
@@ -611,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16cf37fc",
+   "id": "74bddc84",
    "metadata": {},
    "source": [
     "\n",
@@ -633,6 +618,153 @@
     "fitting or evaluating the trained models via the use of the `sample_weight`\n",
     "parameter."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb5d1eee",
+   "metadata": {},
+   "source": [
+    "## Final dataset\n",
+    "\n",
+    "We now assemble the dataset that will be used to train and evaluate the forecasting\n",
+    "models via backtesting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eddd93d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_time = time = skrub.var(\n",
+    "    \"prediction_time\",\n",
+    "    pl.DataFrame().with_columns(\n",
+    "        pl.datetime_range(\n",
+    "            start=time_range_start + pl.duration(days=7),\n",
+    "            end=time_range_end - pl.duration(hours=24),\n",
+    "            time_zone=\"UTC\",\n",
+    "            interval=\"1h\",\n",
+    "        ).alias(\"prediction_time\"),\n",
+    "    ),\n",
+    ")\n",
+    "prediction_time\n",
+    "\n",
+    "features = (\n",
+    "    (\n",
+    "        prediction_time.join(\n",
+    "            electricity_lagged, left_on=\"prediction_time\", right_on=\"time\"\n",
+    "        )\n",
+    "        .join(all_city_weather, left_on=\"prediction_time\", right_on=\"time\")\n",
+    "        .join(calendar, left_on=\"prediction_time\", right_on=\"time\")\n",
+    "    )\n",
+    "    .drop(\"prediction_time\")\n",
+    "    .skb.mark_as_X()\n",
+    ")\n",
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e15c0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "horizon = 1\n",
+    "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
+    "target_df = prediction_time.join(\n",
+    "    electricity.with_columns(\n",
+    "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
+    "    ),\n",
+    "    left_on=\"prediction_time\",\n",
+    "    right_on=\"time\",\n",
+    ")\n",
+    "target = target_df[target_column_name].skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91af7829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import HistGradientBoostingRegressor\n",
+    "import threadpoolctl\n",
+    "\n",
+    "\n",
+    "with threadpoolctl.threadpool_limits(limits=1):\n",
+    "    predictions = features.skb.apply(\n",
+    "        HistGradientBoostingRegressor(\n",
+    "            random_state=0,\n",
+    "            learning_rate=skrub.choose_float(\n",
+    "                0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "            ),\n",
+    "        ),\n",
+    "        y=target,\n",
+    "    )\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7cd5cfb",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            target_df.skb.eval(),\n",
+    "            predictions.rename({\"load_mw_horizon_1h\": \"predicted_load_mw_horizon_1h\"}).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(1000)\n",
+    ").transform_fold(\n",
+    "    [target_column_name, \"predicted_load_mw_horizon_1h\"],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c975e0f",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
+    "ts_cv = TimeSeriesSplit(n_splits=5, max_train_size=None, gap=0)\n",
+    "predictions.skb.cross_validate(\n",
+    "    cv=ts_cv,\n",
+    "    scoring=[\n",
+    "        \"neg_mean_absolute_error\",\n",
+    "        \"neg_mean_squared_error\",\n",
+    "        \"r2\",\n",
+    "        \"neg_mean_absolute_percentage_error\",\n",
+    "    ],\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c84f1b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
