--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "758ed5e4",
+   "id": "3b5eb814",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f48091b",
+   "id": "ac97ae5d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa48225",
+   "id": "cb66a765",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d0930c",
+   "id": "51adf56b",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41970e6",
+   "id": "701ba64d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c5185d",
+   "id": "8ef06af5",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddcc599",
+   "id": "c40225a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5346d4dd",
+   "id": "6bff48e2",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44685d5c",
+   "id": "649e752a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,15 +170,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9759e0da",
+   "id": "20715346",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather_raw = {}\n",
     "for city_name in city_names:\n",
-    "    all_city_weather_raw[city_name] = skrub.var(\n",
-    "        f\"{city_name}_weather_raw\",\n",
-    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\")),\n",
+    "    # all_city_weather_raw[city_name] = skrub.var(\n",
+    "        # f\"{city_name}_weather_raw\",\n",
+    "    all_city_weather_raw[city_name] = (\n",
+    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\"))\n",
     "    ).with_columns(\n",
     "        [\n",
     "            pl.col(\"time\").dt.cast_time_unit(\n",
@@ -191,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3db4398",
+   "id": "64e7bec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1fad1da",
+   "id": "4d50474e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -213,23 +214,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f9ceed2",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3029d1e1",
+   "id": "27f512f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_city_weather = time\n",
+    "all_city_weather = time.skb.eval()\n",
     "for city_name, city_weather_raw in all_city_weather_raw.items():\n",
     "    all_city_weather = all_city_weather.join(\n",
     "        city_weather_raw.rename(lambda x: x if x == \"time\" else x + \"_\" + city_name),\n",
@@ -237,12 +226,16 @@
     "        how=\"inner\",\n",
     "    )\n",
     "\n",
+    "all_city_weather = skrub.var(\n",
+    "    \"all_city_weather\",\n",
+    "    all_city_weather,\n",
+    ")\n",
     "all_city_weather"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d1821b93",
+   "id": "444a4ccc",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b0d27f",
+   "id": "8005ab73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813f5a14",
+   "id": "0626a154",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a830581",
+   "id": "985b9fad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55bd9af8",
+   "id": "cfbda741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b125e396",
+   "id": "234ed0ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0906fe",
+   "id": "8fd0b6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154163e2",
+   "id": "9f11bafc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69778543",
+   "id": "28dcdf15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a798fc",
+   "id": "b3f26bbc",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3474501",
+   "id": "c61afc6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9602210",
+   "id": "7855726c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204deb00",
+   "id": "398242f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,16 +469,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daaa3330",
+   "id": "7c53ddc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import altair\n",
     "\n",
     "\n",
-    "altair.Chart(\n",
-    "    electricity_lagged.tail(100).skb.eval()\n",
-    ").transform_fold(\n",
+    "altair.Chart(electricity_lagged.tail(100).skb.eval()).transform_fold(\n",
     "    [\n",
     "        \"load_mw\",\n",
     "        \"load_mw_lag_1h\",\n",
@@ -499,16 +490,12 @@
     "        \"load_mw_iqr_7d\",\n",
     "    ],\n",
     "    as_=[\"key\", \"load_mw\"],\n",
-    ").mark_line(\n",
-    "    tooltip=True\n",
-    ").encode(\n",
-    "    x=\"time:T\", y=\"load_mw:Q\", color=\"key:N\"\n",
-    ").interactive()"
+    ").mark_line(tooltip=True).encode(x=\"time:T\", y=\"load_mw:Q\", color=\"key:N\").interactive()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8529de10",
+   "id": "6de6d485",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -520,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b429ccf",
+   "id": "4c79e8c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5102e10",
+   "id": "099f6498",
    "metadata": {},
    "source": [
     "\n",
@@ -542,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0ce508",
+   "id": "6da73ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98bc4c11",
+   "id": "cf9b4b82",
    "metadata": {},
    "source": [
     "\n",
@@ -565,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e0735f5",
+   "id": "e2491fd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62d6c10b",
+   "id": "ba29411f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,9 +586,7 @@
     "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
     "    ).skb.eval()\n",
     ").transform_fold(\n",
-    "    [\n",
-    "        f\"temperature_2m_{city_name}\" for city_name in city_names\n",
-    "    ],\n",
+    "    [f\"temperature_2m_{city_name}\" for city_name in city_names],\n",
     ").mark_line(\n",
     "    tooltip=True\n",
     ").encode(\n",
@@ -611,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ca1a3e",
+   "id": "11bda6a2",
    "metadata": {},
    "source": [
     "\n",
@@ -633,6 +618,153 @@
     "fitting or evaluating the trained models via the use of the `sample_weight`\n",
     "parameter."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7c33a1b",
+   "metadata": {},
+   "source": [
+    "## Final dataset\n",
+    "\n",
+    "We now assemble the dataset that will be used to train and evaluate the forecasting\n",
+    "models via backtesting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f415d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_time = time = skrub.var(\n",
+    "    \"prediction_time\",\n",
+    "    pl.DataFrame().with_columns(\n",
+    "        pl.datetime_range(\n",
+    "            start=time_range_start + pl.duration(days=7),\n",
+    "            end=time_range_end - pl.duration(hours=24),\n",
+    "            time_zone=\"UTC\",\n",
+    "            interval=\"1h\",\n",
+    "        ).alias(\"prediction_time\"),\n",
+    "    ),\n",
+    ")\n",
+    "prediction_time\n",
+    "\n",
+    "features = (\n",
+    "    (\n",
+    "        prediction_time.join(\n",
+    "            electricity_lagged, left_on=\"prediction_time\", right_on=\"time\"\n",
+    "        )\n",
+    "        .join(all_city_weather, left_on=\"prediction_time\", right_on=\"time\")\n",
+    "        .join(calendar, left_on=\"prediction_time\", right_on=\"time\")\n",
+    "    )\n",
+    "    .drop(\"prediction_time\")\n",
+    "    .skb.mark_as_X()\n",
+    ")\n",
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd9bcd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "horizon = 1\n",
+    "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
+    "target_df = prediction_time.join(\n",
+    "    electricity.with_columns(\n",
+    "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
+    "    ),\n",
+    "    left_on=\"prediction_time\",\n",
+    "    right_on=\"time\",\n",
+    ")\n",
+    "target = target_df[target_column_name].skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca787ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import HistGradientBoostingRegressor\n",
+    "import threadpoolctl\n",
+    "\n",
+    "\n",
+    "with threadpoolctl.threadpool_limits(limits=1):\n",
+    "    predictions = features.skb.apply(\n",
+    "        HistGradientBoostingRegressor(\n",
+    "            random_state=0,\n",
+    "            learning_rate=skrub.choose_float(\n",
+    "                0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "            ),\n",
+    "        ),\n",
+    "        y=target,\n",
+    "    )\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41975464",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            target_df.skb.eval(),\n",
+    "            predictions.rename({\"load_mw_horizon_1h\": \"predicted_load_mw_horizon_1h\"}).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(1000)\n",
+    ").transform_fold(\n",
+    "    [target_column_name, \"predicted_load_mw_horizon_1h\"],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d079f5b",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
+    "ts_cv = TimeSeriesSplit(n_splits=5, max_train_size=None, gap=0)\n",
+    "predictions.skb.cross_validate(\n",
+    "    cv=ts_cv,\n",
+    "    scoring=[\n",
+    "        \"neg_mean_absolute_error\",\n",
+    "        \"neg_mean_squared_error\",\n",
+    "        \"r2\",\n",
+    "        \"neg_mean_absolute_percentage_error\",\n",
+    "    ],\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4a274f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
